[tool.poetry]
name = "kali-multisig"
version = "0.1.0"
description = ""
authors = ["Folks <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slither-analyzer = "^0.8.2"
web3 = "^5.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
